[package]
name = "Rabbit-OJ-Tester-v2"
version = "0.1.0"
authors = ["ttzztztz <ttzztztz@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sysinfo = "0.15.2"
json = "0.12.4"
serde = { version = "1.0.116", features = ["derive"] }
serde_json = "1.0.57"
nix = "0.18.0"

