[package]
name = "Rabbit-OJ-Tester-v2"
version = "0.1.0"
authors = ["ttzztztz <ttzztztz@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sysinfo = "0.16.1"
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.62"
nix = "0.19.1"
futures = "0.3.12"
tokio = { version = "1.2.0", features = ["full"] }

